--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class and ID Selectors</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+      .odd {
+        background-color: #ffcccc;
+        color:white;
+        font-family: Verdana, DejaVu Sans, sans-serif;
+      }
+      #second {color: blue;
+              font-size: 36px;
+              }
+
+      
+      .third {
+    font-size: 24px;
+}
+#fourth {
+    background-color: #ccffcc;
+    font-size: 24px;
+    font-weight: bold;
+}
   </head>
   <body>
     <p>Number 1 - I'm a class!</p>
