--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -6,6 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
+    button {
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+/* Specific style for the first button */
+.button1 {
+    background-color: black;
+    color: white;
+}
+
+/* Specific style for the second button */
+.button2 {
+    background-color: yellow;
+    color: black;
+}
   </head>
   <body>
     <button>Click Me!</button>
